<resources>
    <string name="app_name" translatable="false">Ontap Unofficial</string>
    <string name="app_name_short" translatable="false">Ontap</string>
    <string name="memory_key" translatable="false">com.kosert.ontap.ONTAP_MEMORY</string>
    <string name="preference_key" translatable="false">com.kosert.ontap.ONTAP_PREFS</string>
    <string name="favorites_key" translatable="false">com.kosert.ontap.ONTAP_FAVS</string>

    <string name="label_favs">Favorites</string>
    <string name="label_cities">Cities</string>

    <string name="favs_empty">You have no favorite multitaps yet!</string>

    <string name="choose_city">Choose city</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_help">Help</string>

    <plurals name="taps">
        <item quantity="one">%1$d tap</item>
        <item quantity="other">%1$d taps</item>
    </plurals>

    <string name="loading">Loading…</string>
    <string name="downloading">Downloading multitaps data…</string>

    <string name="menu_star">Add to Favorites</string>
    <string name="menu_unstar">Remove from Favorites</string>
    <string name="menu_follow">Enable notifications</string>
    <string name="menu_unfollow">Stop notifications</string>
    <string name="menu_map">Show on map</string>
    <string name="menu_info">More information</string>

    <string name="dialog_map">Show on map</string>
    <string name="dialog_website">Go to website</string>
    <string name="dialog_facebook">Go to facebook page</string>
    <string name="dialog_messenger">Contact on Messenger</string>
    <string name="dialog_call">Call %1$s</string>

    <string name="netwok_error">Network Error. Data may be obsolete.</string>

    <string name="toast_edit_enabled">Edit mode enabled</string>
    <string name="toast_edit_saved">Favorites saved!</string>
    <string name="toast_starred">%1$s added to favorites!</string>
    <string name="toast_unstarred">%1$s removed from favorites!</string>
    <string name="toast_not_implemented">Not implemented yet :&lt;</string>
    <string name="toast_cache_cleared">Cache memory cleared!</string>
    <string name="toast_followed">Enabled notifications for %1$s</string>
    <string name="toast_unfollowed">Disabled notifications for %1$s</string>

    <string name="settings_notifications">Notifications</string>
    <string name="settings_following">Pubs you follow</string>
    <string name="settings_other">Other</string>
    <string name="setting_clear">Clear data cache</string>
    <string name="settings_clear_description">Remove cached cities and pubs. Your favorites will not be removed.</string>
    <string name="settings_notifications_text">Enable Notifications</string>
    <string name="settings_notifications_description">Get notified about new beers in selected pubs</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_led">Blink LED</string>
    <string name="settings_sync_period">Sync frequency</string>
    <string-array name="settings_sync_times">
        <item>Every 5 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every 1 hour</item>
    </string-array>

    <string name="about_title">About</string>
    <string name="github_url" translatable="false">github.com/Kosert/OntapUnofficial</string>
    <string name="version">Version %1$s</string>

    <string name="notification_service">Notification Service.</string>
    <string name="notification_channel_id" translatable="false">BEER_NOTIFICATION_CHANNEL_ID</string>
    <string name="notification_channel_name">New Beers</string>
    <string name="notification_channel_description">Notifications about new beers in selected multitaps</string>

    <plurals name="notification_title">
        <item quantity="one">New beer in %2$s!</item>
        <item quantity="other">%1$d new beers in %2$s!</item>
    </plurals>

    <string name="notification_text_one">%1$s - %2$s</string>
    <plurals name="notification_text_more">
        <item quantity="other">%1$s - %2$s and %3$d more</item>
    </plurals>

</resources>
