<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/multitap_menu_star"
        android:icon="@drawable/ic_star_border_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_star"
        app:showAsAction="always" />
    <item
        android:id="@+id/multitap_menu_notification"
        android:icon="@drawable/ic_notification_off_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_follow"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/multitap_menu_info"
        android:icon="@drawable/ic_info_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom" />
</menu>