<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="3dip"
    android:paddingEnd="3dip"
    android:paddingStart="3dip"
    android:paddingTop="9dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="54dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dip"
            android:layout_marginEnd="10dip"
            android:layout_marginStart="10dip"
            android:layout_marginTop="6dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="6dp"
                android:paddingTop="3dp"
                android:src="@drawable/ic_info_24dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Details"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dip"
        android:paddingEnd="10dip"
        android:paddingStart="14dip"
        android:paddingTop="2dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/multitap_dialog_img"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="2dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/multitap_dialog_name"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorAccent"/>


                <TextView
                    android:id="@+id/multitap_dialog_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/multitap_dialog_button_star"
                style="@style/BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:drawableStart="@drawable/ic_star_border_24dp"
                android:text="@string/menu_star"/>

            <Button
                android:id="@+id/multitap_dialog_button_notify"
                style="@style/BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:drawableStart="@drawable/ic_notification_off_24dp"
                android:text="@string/menu_follow"/>

            <Button
                android:id="@+id/multitap_dialog_button_map"
                style="@style/BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:drawableStart="@drawable/ic_map_24dp"
                android:text="@string/dialog_map"/>

            <Button
                android:id="@+id/multitap_dialog_button_website"
                style="@style/BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:drawableStart="@drawable/ic_public_black_24dp"
                android:text="@string/dialog_website"/>

            <Button
                android:id="@+id/multitap_dialog_button_call"
                style="@style/BorderlessButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:drawableStart="@drawable/ic_phone_24dp"
                android:text="@string/dialog_call"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
